button font issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ button {
     font-size: inherit;
     cursor: pointer;
     background-color: #edf2f4;
+    color:#222222
 }
 
 .clear {
